	- Make wrap_loc and word_back ssize_t's, to match fill. (DLR)
  do_justify()
	- For consistency, preserve placewewant if we didn't unjustify
	  instead of setting it to 0. (DLR)
- winio.c:
  get_kbinput(), get_translated_kbinput(), get_ascii_kbinput(),
  get_untranslated_kbinput()
	- Make the ascii_digits variables ints instead of size_t's,
	  since they will only hold very small values. (DLR)

GNU nano 1.3.5 - 2004.11.22
- General:
	- Convert more ints that hold only TRUE and FALSE values to
	  bools. (DLR)
	- Consolidate the code for finding and running a shortcut in a
	  shortcut list, the code for finding and toggling a toggle in a
	  toggle list, and the code for doing both of those and
	  interpreting mouse clicks in the edit window.  Also move the
	  code for do_mouse() to get_edit_mouse() and tweak it to
	  properly handle cases where a shortcut isn't clicked.  New
	  functions get_shortcut(), get_toggle(), get_edit_input(), and
	  get_edit_mouse(); changes to do_browser(), do_justify(),
	  do_help(), and main(). (DLR)
	- Simplify a few more translated messages. (DLR)
	- Translation updates (see po/ChangeLog for details).
	- Remove reference to @includedir@ in src/Makefile.am, as it's
	  unneeded and can break cross-compilation. (DLR, found by Mike
	  Frysinger)
	- Overhaul the file opening, reading, and loading operations to
	  increase efficiency, avoid problems on invalid filenames
	  specified on the command line, and eliminate corner cases that
	  erroneously leave edittop or current NULL when they shouldn't
	  be.  Also split out the code to execute a command into a
	  separate function, eliminate a workaround for one of the
	  aforementioned corner cases, handle files with a mix of DOS
	  and Mac format lines, and remove the code to turn on the
	  NO_CONVERT flag when opening a binary file, as it's not always
	  reliable and will cause problems with UTF-8 text files.  New
	  functions open_file(), execute_command(), and mallocstrassn();